Feb 9, 2022
    Updated URLs in addons to point to main instead of IC-ScriptHub-Public on github.

Feb 4, 2022
    Dashwait after stacking checks current formation instead of favorite 1.
    Updates to slightly change how stack fails are recorded and prioritized.
    Potential fix for error spam during attempts to update GUI when Gem Farm script abruptly stops.
    Updated GameManager Pointers for v418.2 on steam.
    Updated pointers and offsets for GameSettings on steam to re-enable chest opening in v418.2.

Feb 1, 2022
    Updated how refocus after game load works.
    Added patron compatability for manual resets.
    Added system/compatability for "Miniscripts" via BrivGemFarm. 
    Small bugfixes, typo corrections, and version updates.

Jan 31, 2022
    Updated Slow/Fast runs to update when using manual reset from ResetZoneBuffer. (Emmes)
    Added WaitForProcess user setting to assist Kartridge users when PID changes. (sycdan)
    Removed timescale modification to the timeout on dashwait since certain problems can cause it to time out early.
    Added potential fix for steam not recognizing it is stuck quickly enough when the platform (e.g. steam) can't connect.
    Added a quick switch back to previously active window. Should reduce game popping up over current window.
    Added DialogManager class including steam/egs offsets for v418.1.

Jan 29, 2022
    Increased FullMemoryView tab's lista area size.
    Updated offsets for Steam/EGS v418.1.
    Updated how loop time resets. (Emmes)
    * REVERTED: Updated logic for stacking to accomodate early stackers better. (Emmes) 
    Updated Dashwait to occur after stacking to accomodate early stackers better. Use the DashWaitBuffer advanced setting to prevent dashwait after stacking.

Jan 24, 2022
    Addon EffectKey Handler Full Read: A new add on to test effectkey handlers are functioniong properly.

Jan 23, 2022