@@ -1,0 +1,14 @@
+{
+	"Name":"BrivGemFarm Advanced Settings",
+	"Version": "v0.1.0",
+    "Includes" : "IC_BrivGemFarm_AdvancedSettings_Includes.ahk",
+    "Author" : "Antilectual",
+    "Url" : "https://github.com/mikebaldi/Idle-Champions/tree/main/AddOns/IC_BrivGemFarm_AdvancedSettings",
+    "Info" : "GUI for extra advanced settings stored in Briv Gem Farm addon's BrivGemFarmSettings.json",
+    "Dependencies" : [
+        {
+            "Name":"Briv Gem Farm",
+            "Version":"v1.0."
+        }
+    ]
+}
