@@ -1,0 +1,8 @@
+; ############################################################
+;                        Includes
+; ############################################################
+#include *i %A_LineFile%\..\..\IC_BrivGemFarm_Performance\IC_BrivGemFarm_AdvancedSettings_Gui.ahk
+#include *i %A_LineFile%\..\IC_BrivGemFarm_AdvancedSettings_Gui.ahk
+#include *i %A_LineFile%\..\IC_BrivGemFarm_AdvancedSettings_Functions.ahk
+#include *i %A_LineFile%\..\IC_BrivGemFarm_AdvancedSettings_Component.ahk
+#include *i %A_LineFile%\..\IC_BrivGemFarm_AdvancedSettings_Component.ahk
